--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>VoidHook</title>
+  <link rel="icon" type="image/png" href="voidhook-icon.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
@@ -20,7 +18,6 @@
       justify-content: center;
       min-height: 100vh;
     }
-
     .container {
       background: #1a1a1a;
       border-radius: 20px;
@@ -30,19 +27,29 @@
       box-shadow: 0 0 20px #8000ff99;
       animation: fadeIn 0.6s ease-in-out;
     }
-
-    h1 {
-      text-align: center;
-      color: #b166ff;
+    .title-logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 12px;
       margin-bottom: 1.5rem;
     }
-
+    .title-logo img {
+      height: 40px;
+      width: 40px;
+      border-radius: 50%;
+      box-shadow: 0 0 10px #8000ff88;
+    }
+    .title-logo h1 {
+      color: #b166ff;
+      font-size: 1.8rem;
+      margin: 0;
+    }
     .tabs {
       display: flex;
       justify-content: space-between;
       margin-bottom: 1.5rem;
     }
-
     .tab {
       flex: 1;
       text-align: center;
@@ -55,28 +62,23 @@
       border-radius: 10px 10px 0 0;
       transition: background 0.3s;
     }
-
     .tab.active {
       background: #8000ff;
       color: white;
       box-shadow: 0 0 10px #8000ff88;
     }
-
     .tab-content {
       display: none;
     }
-
     .tab-content.active {
       display: block;
       animation: fadeIn 0.5s ease-in-out;
     }
-
     label {
       display: block;
       margin: 0.5rem 0 0.2rem;
       color: #ccc;
     }
-
     input, textarea {
       width: 100%;
       padding: 0.5rem;
@@ -88,11 +90,9 @@
       outline: none;
       transition: border-color 0.2s;
     }
-
     input:focus, textarea:focus {
       border-color: #8000ff;
     }
-
     button.action {
       background: #8000ff;
       color: white;
@@ -106,18 +106,14 @@
       transition: background 0.3s, transform 0.2s;
       box-shadow: 0 0 10px #8000ff66;
     }
-
     button.action:hover {
       background: #a74aff;
       transform: scale(1.03);
     }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to   { opacity: 1; transform: translateY(0); }
     }
-
-    /* Notifications */
     .notifications {
       position: fixed;
       top: 20px;
@@ -127,7 +123,6 @@
       gap: 12px;
       z-index: 1000;
     }
-
     .toast {
       background: #2a2a2a;
       color: #fff;
@@ -138,7 +133,6 @@
       overflow: hidden;
       animation: slideIn 0.3s ease forwards;
     }
-
     .toast::after {
       content: '';
       position: absolute;
@@ -148,12 +142,10 @@
       background: #8000ff;
       animation: progress 3s linear forwards;
     }
-
     @keyframes slideIn {
       from { opacity: 0; transform: translateX(20px); }
       to   { opacity: 1; transform: translateX(0); }
     }
-
     @keyframes progress {
       from { width: 100%; }
       to   { width: 0%; }
@@ -163,8 +155,11 @@
 <body>
   <div class="notifications" id="notifications"></div>
 
-  <div class="container glow">
-    <h1>VoidHook</h1>
+  <div class="container">
+    <div class="title-logo">
+      <img src="voidhook-icon.png" alt="VoidHook Logo">
+      <h1>VoidHook</h1>
+    </div>
 
     <div class="tabs">
       <button class="tab active" onclick="switchTab('send')">Send</button>
@@ -222,10 +217,8 @@
     function switchTab(tabId) {
       const tabs = document.querySelectorAll('.tab');
       const contents = document.querySelectorAll('.tab-content');
-
       tabs.forEach(tab => tab.classList.remove('active'));
       contents.forEach(content => content.classList.remove('active'));
-
       document.querySelector(`.tab[onclick="switchTab('${tabId}')"]`).classList.add('active');
       document.getElementById(tabId).classList.add('active');
     }
@@ -298,8 +291,8 @@
 
     async function deleteWebhook() {
       const url = document.getElementById('deleteUrl').value;
-
       if (!url) return showToast('Enter a webhook URL.');
+      if (!confirm('Are you sure you want to delete this webhook?')) return;
 
       try {
         await fetch(url, { method: 'DELETE' });
